# ai-functions

./: .gitignore  CONTRIBUTING.md  INVARIANTS.md  README.md  pyproject.toml  stubtest-allowlist.txt
.github/workflows/: pypi-publish-on-release.yml  test-lint.yml
docs/: architecture.md  economics.md  tutorial.md
examples/: 01_one_shot.py  02_multi_turn.py  03_runtime_basics.py  04_spawnable_workflow.py  05_two_workers_local.py  06_two_workers_remote.py  07_claude_code.py  07_session_resume.py  08_serve_cli.py  08_session_resume.py  09_kiro_agent.py  09_serve_cli.py  11_memory_optimization.py  12_memory_agentcore.py  13_memory_list.py  14_memory_procedural.py  15_translate.py  16_integral_calculator.py  17_review_analyzer.py  18_calculator.py  19_meeting_summary.py  20_receipt_parser_tool.py  21_contract_analyzer.py  22_data_normalizer.py  23_fuzzy_merge.py  24_universal_loader.py  25_sql_generator.py  26_multiagent_orchestration.py  27_stock_report.py  28_summarization.py  29_memory_tools.py  30_scipy_backprop.py  31_pandas_backprop.py  _buggy_c.py  _ds1000_scipy.py  _ds1000_utils.py  _economics_models.py  _economics_utils.py  _pandas_problems.py  _sat.py  (+36 more)
examples/looped-threads/: .gitignore  README.md  main.py  plotting.py  pyproject.toml  seed_model.py
examples/skillsbench/: README.md  REPORT.md  memory_improvement_loop.py  pyproject.toml  task_source.py
spec/ai_functions/: __init__.pyi  connect.pyi  discovery.pyi  handle.pyi  protocols.pyi  serve.pyi  session.pyi  utils.pyi
spec/ai_functions/ai_thread/: __init__.pyi  ai_function.pyi  ai_thread.pyi  code_execution.pyi  config.pyi  errors.pyi  postcondition.pyi  reconstruction.pyi  summarization.pyi  tools.pyi
spec/ai_functions/claude_code/: __init__.pyi  claude_code.pyi  coordinator_tools.pyi
spec/ai_functions/cli/: __init__.pyi  app.pyi  attach.pyi  commands.pyi  events.pyi  server.pyi
spec/ai_functions/experimental/economics/: __init__.pyi  beliefs.pyi  decorators.pyi  function.pyi  search.pyi  types.pyi
spec/ai_functions/kiro/: kiro.pyi
spec/ai_functions/memory/: __init__.pyi  agentcore_backend.pyi  base.pyi  frozen.pyi  json_backend.pyi  procedural.pyi
spec/ai_functions/network/: __init__.pyi  channel.pyi  client.pyi  endpoint.pyi  wire.pyi
spec/ai_functions/optimizer/: __init__.pyi  textgrad.pyi
spec/ai_functions/runtime/: __init__.pyi  coordinator.pyi  errors.pyi  usage.pyi  worker.pyi
spec/ai_functions/testing/: __init__.pyi  _barriers.pyi  harness.pyi  messages.pyi  scripted_model.pyi
spec/ai_functions/tools/: __init__.pyi  local_python_executor.pyi
spec/ai_functions/types/: __init__.pyi  context.pyi  events.pyi  graph.pyi  policy.pyi  status.pyi
src/ai_functions/: __init__.py  _type.py  connect.py  core.py  decorator.py  discovery.py  handle.py  protocols.py  serve.py  session.py  utils.py
src/ai_functions/ai_thread/: ai_function.py  ai_thread.py  code_execution.py  config.py  debug.py  errors.py  postcondition.py  reconstruction.py  summarization.py  tools.py
src/ai_functions/claude_code/: claude_code.py  coordinator_tools.py
src/ai_functions/cli/: __init__.py  app.py  attach.py  commands.py  events.py  server.py
src/ai_functions/experimental/economics/: __init__.py  beliefs.py  decorators.py  function.py  search.py  types.py
src/ai_functions/kiro/: __init__.py  kiro.py
src/ai_functions/memory/: __init__.py  agentcore_backend.py  base.py  frozen.py  json_backend.py  procedural.py
src/ai_functions/network/: __init__.py  _transport_config.py  channel.py  client.py  endpoint.py  wire.py  wire_methods.py
src/ai_functions/optimizer/: __init__.py  _formatting.py  _graph.py  rendering.py  textgrad.py
src/ai_functions/runtime/: coordinator.py  errors.py  usage.py  worker.py
src/ai_functions/testing/: _barriers.py  harness.py  messages.py  scripted_model.py
src/ai_functions/tools/: local_python_executor.py
src/ai_functions/types/: __init__.py  context.py  events.py  graph.py  ids.py  status.py
src/ai_functions/utils/: _async.py
tests/: conftest.py  test_agentcore_backend.py  test_cli_attach.py  test_cli_commands.py  test_code_env_preamble.py  test_economics.py  test_example_session_resume.py  test_fork.py  test_i10_dangling_tool_calls.py  test_json_list_memory.py  test_lifecycle_invariants.py  test_memory_optimizer.py  test_pure_functions.py  test_reconstruct_roundtrip.py  test_runtime_behavior.py  test_runtime_tools.py  test_serve_disconnect.py  test_session_store.py  test_summarization.py  test_testing_harness.py  test_trace_dataflow.py  test_wire_disconnect_logging.py
