[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-ai-functions"
version = "2.0.0.dev0"
description = "AI Function decorator for enhancing functions with AI capabilities"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "AWS", email = "opensource@amazon.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "strands-agents>=1.16.0",
    "pydantic>=2.4.0,<3.0.0",
    "tstr>=0.4.0.post1",
    # The CLI (`ai-functions`) is built on the network layer and the
    # Typer/Rich/Textual stack, so these are runtime requirements.
    "websockets>=12.0",
    "cloudpickle>=3.0.0",
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.70",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
network = [
    "websockets>=12.0",
    "cloudpickle>=3.0.0",
]
claude-code = [
    "claude-agent-sdk>=0.1.66",
]
kiro = [
    "agent-client-protocol==0.10.1",
]

[project.scripts]
ai-functions = "ai_functions.cli:main"

[project.urls]
Homepage = "https://github.com/strands-labs/ai-functions"
Repository = "https://github.com/strands-labs/ai-functions.git"
Issues = "https://github.com/strands-labs/ai-functions/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_functions"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.1.0",
    "mypy>=1.20.0",
    "websockets>=12.0",
    "cloudpickle>=3.0.0",
    "claude-agent-sdk>=0.1.66",
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.70",
    "platformdirs>=4.0",
    "agent-client-protocol==0.10.1",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=ai_functions {args:tests}"
lint = "ruff check src tests"
format = "ruff format src tests"
check-spec = "MYPYPATH=spec stubtest ai_functions --mypy-config-file pyproject.toml --allowlist stubtest-allowlist.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:websockets\\.legacy is deprecated:DeprecationWarning:websockets.legacy",
]

[tool.ruff]
line-length = 120
include = ["examples/**/*.py", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "UP", "W"]
ignore = ["D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"examples/**/*.py" = ["D"]
"src/ai_functions/network/client.py" = ["D101", "D102", "D105"]
"src/ai_functions/network/endpoint.py" = ["D101", "D102", "D105"]
"src/ai_functions/network/channel.py" = ["D101", "D102", "D105"]
"src/ai_functions/network/wire_methods.py" = ["D101"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.uv.workspace]
members = ["examples"]
