[project]
name = "looped-ai-threads-example"
version = "0.1.0"
description = "Looped-Threads house-price example — a coding AI-Thread that searches for the best model."
requires-python = ">=3.12"
# Dependencies specific to this Kaggle house-price example, kept local to the
# folder so they don't bloat the shared examples environment.
dependencies = [
    "strands-ai-functions",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "numpy>=1.24",
    "rich>=13.7",
]

# Standalone example, not a build target and not a uv workspace member (uv forbids
# workspace members nested inside another member such as `examples`).
[tool.uv]
package = false

# Use the repo's local strands-ai-functions rather than the published wheel.
[tool.uv.sources]
strands-ai-functions = { path = "../..", editable = true }
